Fixed inefficient use of number constructor in SVM.